# synkro

./: .gitignore  ARCHITECTURE.md  K8S.md  README.md  architecture.mmd  grpc_rabbitmq_implementation_plan.md  k8s-all-services.yaml  k8s-deployment.yaml  order-creation-fix.md  run-local.sh  shell:run-local.sh  summary-of-transaction-fix.md  testing-grpc-communication.md
Elk/: .env.example  .gitignore  docker-compose.yml  logstash.conf
ai-ml-predictions/: .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.test  README.md  check_db.py  docker-compose.test.yml  docker-compose.yml  environment.yml  fetch_predictions.py  k8s-deployment.yaml  pyproject.toml  requirements.test.txt  requirements.txt  test_prediction_api.py
ai-ml-predictions/ai_ml_predictions.egg-info/: PKG-INFO  SOURCES.txt
ai-ml-predictions/app/: main.py
ai-ml-predictions/scripts/: __init__.py  init_db.py  run_docker_tests.sh  run_migrations.sh  run_tests.sh  run_tests_docker.sh
ai-ml-predictions/tests/: conftest.py  test_feature_store.py  test_prediction_service.py
api-gateway-auth/: .env.example  .env.test  DEVELOPMENT-PLAN.md  Dockerfile  MIGRATIONS.md  README.md  docker-compose.yml  k8s-deployment.yaml  package.json  pg_hba.conf  pnpm-lock.yaml
api-gateway-auth/src/: app.controller.ts  app.module.ts  data-source.ts  main.ts
api-gateway-auth/test/: app.e2e-spec.ts  auth.e2e-spec.ts  jest-e2e.config.js  routing.e2e-spec.ts  user-role.e2e-spec.ts
docs/: synkro-inventory-logistics-architecture.md  testing-grpc-communication.md
frontend-auth/: .env.example  .gitignore  README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend-auth/src/: App.vue  main.ts
frontend-dashboard/: .env.example  .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend-dashboard/src/: middleware.ts
frontend-landing/: .env.example  .gitignore  README.md  astro.config.mjs  install-deps.sh  package.json  pnpm-lock.yaml  tailwind.config.js
frontend-landing/src/: env.d.ts
graph/: a.mmd  flow.mmd
inventory-sync-service/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  INTEGRATION.md  README.md  client_test.go  go.mod  go.sum  k8s-deployment.yaml
inventory-sync-service/scripts/: run_integration_tests.sh
inventory-sync-service/src/: main.go
inventory-sync-service/tests/: basic_test.go  e2e_test.go  integration_test.go  logistics_integration_test.go
k8s/: README.md  ingress.yaml  kustomization.yaml  script-to-split-yaml.sh
k8s/ai-ml-predictions/: deployment.yaml  kustomization.yaml  service.yaml
k8s/api-gateway-auth/: deployment.yaml  kustomization.yaml  service.yaml
k8s/database/: kustomization.yaml
k8s/elk-stack/: kustomization.yaml
logistics-engine/: .dockerignore  .env.example  Cargo.toml  Dockerfile  GRPC_RABBITMQ_IMPLEMENTATION.md  README.md  build.rs  docker-compose.yml  k8s-deployment.yaml  k8s-ingress.yaml  rebuild_sqlx_cache.sh  setup.sh
logistics-engine/.cargo/: config.toml
logistics-engine/migrations/: 20240304000000_create_tables.sql  20240306000000_fix_schema_2.sql
logistics-engine/patches/sqlx-macros-core/: Cargo.toml
logistics-engine/patches/sqlx-macros-core-0.7.4/: Cargo.toml
logistics-engine/patches/sqlx-macros-core-0.7.4/src/: lib.rs  migrate.rs
logistics-engine/patches/sqlx-macros-core/src/: migrate.rs
logistics-engine/patches/sqlx-macros-core/src/database/: mod.rs
logistics-engine/proto/: inventory_service.proto  order_service.proto
logistics-engine/scripts/: run_migrations.sh  run_seed.sh  seed.sql
logistics-engine/scripts/migrations/: 20240304000000_create_tables.sql  20240306000000_fix_schema.sql  20240306000000_fix_schema_2.sql
logistics-engine/src/: lib.rs  main.rs  proto.rs
logistics-engine/src/api/: middleware.rs  mod.rs  routes.rs  utils.rs
logistics-engine/src/api/handlers/: analytics_handlers.rs  customer_handlers.rs  dashboard_handlers.rs  inventory_handlers.rs  mod.rs  order_handlers.rs  payment_handlers.rs  shipping_handlers.rs  warehouse_handlers.rs
logistics-engine/src/config/: mod.rs
logistics-engine/src/db/: mod.rs
logistics-engine/src/db/repository/: analytics_repository.rs  customer_repository.rs  inventory_repository.rs  mod.rs  order_item_repository.rs  order_repository.rs  payment_repository.rs  shipping_repository.rs  warehouse_repository.rs
logistics-engine/src/error/: grpc.rs  mod.rs
logistics-engine/src/errors/: mod.rs
logistics-engine/src/grpc/: mod.rs
logistics-engine/src/grpc/inventory/: client.rs  mod.rs  server.rs
logistics-engine/src/grpc/order/: mod.rs  server.rs
logistics-engine/src/models/: analytics.rs  customer.rs  inventory.rs  mod.rs  order.rs  order_item.rs  payment.rs  shipping.rs  warehouse.rs
logistics-engine/src/models/dto/: customer.rs  mod.rs  order.rs  order_item.rs  payment.rs  shipping.rs
logistics-engine/src/models/entities/: customer.rs  inventory_reservation.rs  mod.rs  order.rs  order_item.rs  order_status_history.rs  payment_info.rs  shipping_info.rs
logistics-engine/src/mq/: connection.rs  consumer.rs  dlq.rs  events.rs  mod.rs  publisher.rs
logistics-engine/src/services/: analytics_service.rs  customer_service.rs  inventory_service.rs  mod.rs  order_producer_service.rs  order_service.rs  payment_service.rs  shipping_service.rs  warehouse_service.rs
logistics-engine/src/utils/: jwt.rs  metrics.rs  mod.rs  pagination.rs  tracing.rs  validation.rs
logistics-engine/tests/integration/: messaging_test.rs
migrations/: 20240303000000_initial_schema.sql
notification-service/: .gitignore  Dockerfile  k8s-deployment.yaml  package.json  tsconfig.json
scripts/: cleanup.sh  deploy.sh  shell:run-local.sh  test-config.yaml  test.sh
(+405 files in other folders)
